--- a/package.json
+++ b/package.json
@@ -18,30 +18,30 @@
         "node": ">=22"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.899.0",
-        "@aws-sdk/s3-request-presigner": "^3.899.0",
+        "@aws-sdk/client-s3": "^3.931.0",
+        "@aws-sdk/s3-request-presigner": "^3.931.0",
         "@koa/cors": "^5.0.0",
         "@koa/multer": "^4.0.0",
         "@koa/router": "^14.0.0",
         "@passwordless-id/webauthn": "^2.3.1",
-        "@smithy/smithy-client": "^4.7.0",
-        "@supabase/auth-js": "^2.72.0",
-        "@supabase/supabase-js": "^2.58.0",
+        "@smithy/smithy-client": "^4.9.6",
+        "@supabase/auth-js": "^2.81.1",
+        "@supabase/supabase-js": "^2.81.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
         "cross-env": "^10.1.0",
         "dotenv": "^17.2.3",
         "jsonwebtoken": "^9.0.2",
-        "koa": "^3.0.1",
+        "koa": "^3.1.1",
         "koa-bodyparser": "^4.4.1",
         "koa-jwt": "^4.0.4",
         "koa-logger": "^4.0.0",
         "koa-mount": "^4.2.0",
         "koa2-swagger-ui": "^5.12.0",
         "koagger": "^0.4.0",
-        "marked": "^16.3.0",
-        "mobx-github": "^0.5.1",
-        "mobx-restful": "^2.1.3",
+        "marked": "^17.0.0",
+        "mobx-github": "^0.6.2",
+        "mobx-restful": "^2.1.4",
         "pg": "^8.16.3",
         "pg-connection-string": "^2.9.1",
         "reflect-metadata": "^0.2.2",
@@ -50,34 +50,34 @@
         "tslib": "^2.8.1",
         "typeorm": "^0.3.27",
         "undici": "^7.16.0",
-        "web-utility": "^4.6.1"
+        "web-utility": "^4.6.4"
     },
     "devDependencies": {
-        "@eslint/js": "^9.36.0",
-        "@octokit/openapi-types": "^26.0.0",
+        "@eslint/js": "^9.39.1",
+        "@octokit/openapi-types": "^27.0.0",
         "@types/eslint-config-prettier": "^6.11.3",
         "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.10",
-        "@types/koa": "^3.0.0",
+        "@types/koa": "^3.0.1",
         "@types/koa-logger": "^3.1.5",
-        "@types/node": "^22.18.7",
+        "@types/node": "^22.19.1",
         "better-sqlite3": "^12.4.1",
-        "eslint": "^9.36.0",
+        "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-simple-import-sort": "^12.1.1",
-        "globals": "^16.4.0",
+        "globals": "^16.5.0",
         "husky": "^9.1.7",
         "jest": "^29.7.0",
-        "jiti": "^2.6.0",
+        "jiti": "^2.6.1",
         "koajax": "^3.1.2",
-        "lint-staged": "^16.2.3",
+        "lint-staged": "^16.2.6",
         "prettier": "^3.6.2",
         "start-server-and-test": "^2.1.2",
-        "swagger-typescript-api": "^13.2.13",
-        "ts-jest": "^29.4.4",
+        "swagger-typescript-api": "^13.2.16",
+        "ts-jest": "^29.4.5",
         "ts-node": "^10.9.2",
-        "typescript": "~5.9.2",
-        "typescript-eslint": "^8.45.0"
+        "typescript": "~5.9.3",
+        "typescript-eslint": "^8.46.4"
     },
     "resolutions": {
         "reflect-metadata": "$reflect-metadata",
@@ -112,7 +112,8 @@
         "jest": "jest",
         "debug": "server-test start-test 8080 jest",
         "test": "npm run build  &&  server-test start-test 8080 build-test  &&  npm run debug",
-        "build": "rm -rf dist/ type/*.d.ts  &&  tsc  &&  mv dist/model/*.d.ts type/",
+        "pack-type": "tsc --emitDeclarationOnly --outDir type/  &&  cd type/  &&  rm -f *.d.ts  &&  cp -rf model/* .  &&  rm -rf model/ service/ controller/",
+        "build": "rm -rf dist/ type/*.d.ts  &&  tsc  &&  npm run pack-type",
         "start": "cross-env NODE_ENV=production  node dist/",
         "typeorm": "typeorm-ts-node-commonjs -d source/model/index.ts",
         "migration:generate": "npm run typeorm -- migration:generate",
